Update assignment title and header

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \pagestyle{headandfoot}
 \runningheadrule
 \runningfootrule
-\runningheader{MATH 402 Applied Stochastic Processes}{Assignment 2}{Fall 2023}
+\runningheader{MATH 402 Applied Stochastic Processes}{Assignment 2B}{Fall 2023}
 \runningfooter{}{Page \thepage\ of \numpages}{}
 \firstpageheader{}{}{}
 
@@ -25,7 +25,7 @@
 \newcommand\ul\underline
 \newcommand\ol\overline
 
-\title{Assignment 2\\ MATH 402 Applied Stochastic Processes\\ Habib University -- Fall 2023}
+\title{Assignment 2B\\ MATH 402 Applied Stochastic Processes\\ Habib University -- Fall 2023}
 \author{Ali Asghar Yousuf \\ ay06993}  % replace with your ID, e.g. oy02945
 \date{\today}
 
